@@ -1,3 +1,5 @@
+[225 - 11-12-2009]
+FIX: Once you set a field as hidden, you can not change it back
 
 [224 - 9-12-2009]
 Support to user's callback functions on crud operations: 
